// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AppBar Main app bar 1`] = `
<header
  className="MuiPaper-root-8 MuiPaper-shadow4-14 MuiAppBar-root-1 MuiAppBar-positionStatic-4 MuiAppBar-colorDefault-5"
>
  <div
    className="MuiToolbar-root-35 MuiToolbar-gutters-36"
  >
    <p
      className="MuiTypography-root-37 MuiTypography-body1-46"
    >
      Wells Fargo
    </p>
  </div>
</header>
`;

exports[`Storyshots Cards Content card 1`] = `
<div
  className="MuiPaper-root-8 MuiPaper-shadow2-12 MuiPaper-rounded-9"
>
  <div>
    <h1>
       Content 
    </h1>
  </div>
</div>
`;

exports[`Storyshots Cards Simple card 1`] = `
<div
  className="MuiPaper-root-8 MuiPaper-shadow2-12 MuiPaper-rounded-9"
>
  <div
    className="MuiCardContent-root-64 MuiCardHeader-root-59"
  >
    <div
      className="MuiCardHeader-content-61"
    >
      <span
        className="MuiTypography-root-37 MuiTypography-headline-42 MuiCardHeader-title-62"
      >
        Title
      </span>
      <span
        className="MuiTypography-root-37 MuiTypography-body1-46 MuiTypography-colorSecondary-57 MuiCardHeader-subheader-63"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root-64"
  >
    fdsa
  </div>
</div>
`;

exports[`Storyshots HighlightBox Account Total 1`] = `
<div
  className="MuiPaper-root-8 MuiPaper-shadow2-12 MuiPaper-rounded-9"
>
  <div
    className="MuiCardContent-root-64 MuiCardHeader-root-59"
  >
    <div
      className="MuiCardHeader-content-61"
    >
      <span
        className="MuiTypography-root-37 MuiTypography-headline-42 MuiCardHeader-title-62"
      >
        Account Total
      </span>
      <span
        className="MuiTypography-root-37 MuiTypography-body1-46 MuiTypography-colorSecondary-57 MuiCardHeader-subheader-63"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root-64"
  >
    <h1>
      $7,749.34
    </h1>
    <hr
      className="MuiDivider-root-70 MuiDivider-default-71"
    />
    <ul
      className="MuiList-root-75 MuiList-padding-76"
    >
      <li
        className="MuiListItem-root-117 MuiListItem-gutters-124 MuiListItem-default-120"
        disabled={false}
      >
        <div
          className="MuiListItemText-root-127"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots HighlightBox Annulized Percentage Return 1`] = `
<div
  className="MuiPaper-root-8 MuiPaper-shadow2-12 MuiPaper-rounded-9"
>
  <div
    className="MuiCardContent-root-64 MuiCardHeader-root-59"
  >
    <div
      className="MuiCardHeader-content-61"
    >
      <span
        className="MuiTypography-root-37 MuiTypography-headline-42 MuiCardHeader-title-62"
      >
        Annulized Percentage Return
      </span>
      <span
        className="MuiTypography-root-37 MuiTypography-body1-46 MuiTypography-colorSecondary-57 MuiCardHeader-subheader-63"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root-64"
  >
    <h1>
      3.75%
    </h1>
    <hr
      className="MuiDivider-root-70 MuiDivider-default-71"
    />
    <ul
      className="MuiList-root-75 MuiList-padding-76"
    >
      <li
        className="MuiListItem-root-117 MuiListItem-gutters-124 MuiListItem-default-120"
        disabled={false}
      >
        <div
          className="MuiListItemText-root-127"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Page Test page 1`] = `
<ul
  className="MuiGridList-root-65"
  style={
    Object {
      "margin": -2,
    }
  }
>
  <li
    className="MuiGridListTile-root-66"
    style={
      Object {
        "height": "auto",
        "padding": 2,
        "width": "33.333333333333336%",
      }
    }
  >
    <div
      className="MuiGridListTile-tile-67"
    >
      <div
        className="MuiPaper-root-8 MuiPaper-shadow2-12 MuiPaper-rounded-9"
      >
        <div
          className="MuiCardContent-root-64 MuiCardHeader-root-59"
        >
          <div
            className="MuiCardHeader-content-61"
          >
            <span
              className="MuiTypography-root-37 MuiTypography-headline-42 MuiCardHeader-title-62"
            >
              Title 1
            </span>
            <span
              className="MuiTypography-root-37 MuiTypography-body1-46 MuiTypography-colorSecondary-57 MuiCardHeader-subheader-63"
            />
          </div>
        </div>
        <div
          className="MuiCardContent-root-64"
        >
          <h1>
            1
          </h1>
          <hr
            className="MuiDivider-root-70 MuiDivider-default-71"
          />
          <ul
            className="MuiList-root-75 MuiList-padding-76"
          />
        </div>
      </div>
    </div>
  </li>
  <li
    className="MuiGridListTile-root-66"
    style={
      Object {
        "height": "auto",
        "padding": 2,
        "width": "66.66666666666667%",
      }
    }
  >
    <div
      className="MuiGridListTile-tile-67"
    >
      <div
        className="MuiPaper-root-8 MuiPaper-shadow2-12 MuiPaper-rounded-9"
      >
        <div
          className="MuiCardContent-root-64 MuiCardHeader-root-59"
        >
          <div
            className="MuiCardHeader-content-61"
          >
            <span
              className="MuiTypography-root-37 MuiTypography-headline-42 MuiCardHeader-title-62"
            >
              Title 3
            </span>
            <span
              className="MuiTypography-root-37 MuiTypography-body1-46 MuiTypography-colorSecondary-57 MuiCardHeader-subheader-63"
            />
          </div>
        </div>
        <div
          className="MuiCardContent-root-64"
        >
          <h1>
            3
          </h1>
          <hr
            className="MuiDivider-root-70 MuiDivider-default-71"
          />
          <ul
            className="MuiList-root-75 MuiList-padding-76"
          />
        </div>
      </div>
    </div>
  </li>
  <li
    className="MuiGridListTile-root-66"
    style={
      Object {
        "height": "auto",
        "padding": 2,
        "width": "33.333333333333336%",
      }
    }
  >
    <div
      className="MuiGridListTile-tile-67"
    >
      <div
        className="MuiPaper-root-8 MuiPaper-shadow2-12 MuiPaper-rounded-9"
      >
        <div
          className="MuiCardContent-root-64 MuiCardHeader-root-59"
        >
          <div
            className="MuiCardHeader-content-61"
          >
            <span
              className="MuiTypography-root-37 MuiTypography-headline-42 MuiCardHeader-title-62"
            >
              Title 2
            </span>
            <span
              className="MuiTypography-root-37 MuiTypography-body1-46 MuiTypography-colorSecondary-57 MuiCardHeader-subheader-63"
            />
          </div>
        </div>
        <div
          className="MuiCardContent-root-64"
        >
          <h1>
            2
          </h1>
          <hr
            className="MuiDivider-root-70 MuiDivider-default-71"
          />
          <ul
            className="MuiList-root-75 MuiList-padding-76"
          />
        </div>
      </div>
    </div>
  </li>
  <li
    className="MuiGridListTile-root-66"
    style={
      Object {
        "height": "auto",
        "padding": 2,
        "width": "33.333333333333336%",
      }
    }
  >
    <div
      className="MuiGridListTile-tile-67"
    >
      <div
        className="MuiPaper-root-8 MuiPaper-shadow2-12 MuiPaper-rounded-9"
      >
        <div
          className="MuiCardContent-root-64 MuiCardHeader-root-59"
        >
          <div
            className="MuiCardHeader-content-61"
          >
            <span
              className="MuiTypography-root-37 MuiTypography-headline-42 MuiCardHeader-title-62"
            >
              Title 4
            </span>
            <span
              className="MuiTypography-root-37 MuiTypography-body1-46 MuiTypography-colorSecondary-57 MuiCardHeader-subheader-63"
            />
          </div>
        </div>
        <div
          className="MuiCardContent-root-64"
        >
          <h1>
            2
          </h1>
          <hr
            className="MuiDivider-root-70 MuiDivider-default-71"
          />
          <ul
            className="MuiList-root-75 MuiList-padding-76"
          />
        </div>
      </div>
    </div>
  </li>
  <li
    className="MuiGridListTile-root-66"
    style={
      Object {
        "height": "auto",
        "padding": 2,
        "width": "33.333333333333336%",
      }
    }
  >
    <div
      className="MuiGridListTile-tile-67"
    >
      <div
        className="MuiPaper-root-8 MuiPaper-shadow2-12 MuiPaper-rounded-9"
      >
        <div
          className="MuiCardContent-root-64 MuiCardHeader-root-59"
        >
          <div
            className="MuiCardHeader-content-61"
          >
            <span
              className="MuiTypography-root-37 MuiTypography-headline-42 MuiCardHeader-title-62"
            >
              Title 5
            </span>
            <span
              className="MuiTypography-root-37 MuiTypography-body1-46 MuiTypography-colorSecondary-57 MuiCardHeader-subheader-63"
            />
          </div>
        </div>
        <div
          className="MuiCardContent-root-64"
        >
          <h1>
            2
          </h1>
          <hr
            className="MuiDivider-root-70 MuiDivider-default-71"
          />
          <ul
            className="MuiList-root-75 MuiList-padding-76"
          />
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[`Storyshots Saldo Playground 1`] = `
<div
  className="MuiPaper-root-8 MuiPaper-shadow2-12 MuiPaper-rounded-9"
>
  <div
    className="MuiCardContent-root-64 MuiCardHeader-root-59"
  >
    <div
      className="MuiCardHeader-content-61"
    >
      <span
        className="MuiTypography-root-37 MuiTypography-headline-42 MuiCardHeader-title-62"
      >
        Saldo
      </span>
      <span
        className="MuiTypography-root-37 MuiTypography-body1-46 MuiTypography-colorSecondary-57 MuiCardHeader-subheader-63"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root-64"
  >
    <table
      className="MuiTable-root-79"
    >
      <tbody
        className="MuiTableBody-root-80"
      >
        <tr
          className="MuiTableRow-root-81"
        >
          <td
            className="MuiTableCell-root-87 withStyles-TableCellWrapper--root-86 MuiTableCell-padding-90"
          >
            investedSharesValue
          </td>
          <td
            className="MuiTableCell-root-87 withStyles-TableCellWrapper--root-86 MuiTableCell-padding-90"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            $700.00
          </td>
        </tr>
        <tr
          className="MuiTableRow-root-81"
        >
          <td
            className="MuiTableCell-root-87 withStyles-TableCellWrapper--root-86 MuiTableCell-padding-90"
          >
            earnedSharesValue
          </td>
          <td
            className="MuiTableCell-root-87 withStyles-TableCellWrapper--root-86 MuiTableCell-padding-90"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            $74.93
          </td>
        </tr>
        <tr
          className="MuiTableRow-root-81"
        >
          <td
            className="MuiTableCell-root-87 withStyles-TableCellWrapper--root-86 MuiTableCell-padding-90"
          >
            bonusSharesValue
          </td>
          <td
            className="MuiTableCell-root-87 withStyles-TableCellWrapper--root-86 MuiTableCell-padding-90"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            $0.00
          </td>
        </tr>
        <tr
          className="MuiTableRow-root-81"
        >
          <td
            className="MuiTableCell-root-87 MuiTableCell-padding-90"
          >
            reinvestedSharesValue
          </td>
          <td
            className="MuiTableCell-root-87 MuiTableCell-padding-90"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            $0.00
          </td>
        </tr>
        <tr
          className="MuiTableRow-root-81"
        >
          <td
            className="MuiTableCell-root-87 withStyles-TableCellWrapper--root-86 MuiTableCell-padding-90"
          >
            totalSharesValue
          </td>
          <td
            className="MuiTableCell-root-87 withStyles-TableCellWrapper--root-86 MuiTableCell-padding-90"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            $774.93
          </td>
        </tr>
      </tbody>
    </table>
    <button
      className="MuiButtonBase-root-108 MuiButton-root-94 MuiButton-raised-101"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label-96"
      >
        Sell Shares
      </span>
      <span
        className="MuiTouchRipple-root-110"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots StockGraph Playground 1`] = `
<div
  className="my-pretty-chart-container"
>
  <div
    id="chart"
    style={
      Object {
        "height": "300px",
        "width": "400px",
      }
    }
  >
    <div>
      Rendering Chart
    </div>
  </div>
</div>
`;
